<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_latar">

    <ImageView
        android:id="@+id/neon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingEnd="14dp">

        <ImageView
            android:id="@+id/orb"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/desc_orb"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teks_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/w_teks"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teks_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mati"
                android:textColor="@color/w_redup"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/tombol_siaga"
            android:layout_width="44dp"
            android:layout_height="26dp"
            android:contentDescription="@string/desc_siaga"
            android:scaleType="fitXY"
            android:src="@drawable/tg_off" />
    </LinearLayout>
</FrameLayout>
